# oop

./: .gitignore  README.md  pyproject.toml
01-basico/: class.py  class_definition.py  exemplo.csv  functional.py  usar_class.py
