[tool.poetry]
name = "oop"
version = "0.1.0"
description = "Módulo de OOP"
authors = ["Eduardo Quelotti <eduardoquelotti@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
